--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "dev": "nodemon",
     "build": "rimraf ./build && tsc",
-    "start": "npm run build && node build/index.js",
-    "start-nobuild": "node build/index.js"
+    "start-build": "npm run build && node build/index.js",
+    "start": "node build/index.js"
   },
   "author": "imexoodeex",
   "license": "MIT",
