--- a/package.json
+++ b/package.json
@@ -12,16 +12,18 @@
   "author": "imexoodeex",
   "license": "MIT",
   "dependencies": {
-    "nodemon": "^2.0.20",
+    "dotenv": "^16.0.3",
+    "node-cron": "^3.0.2",
     "puppeteer": "^19.7.2",
-    "ts-node": "^10.9.1",
-    "typescript": "^4.8.4"
+    "undici": "^5.20.0"
   },
   "devDependencies": {
-    "@types/express": "^4.17.14",
     "@types/node": "^18.11.0",
     "@types/puppeteer": "^7.0.4",
-    "rimraf": "^3.0.2"
+    "nodemon": "^2.0.20",
+    "rimraf": "^3.0.2",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.5"
   },
   "nodemonConfig": {
     "ignore": [
